--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,31 @@
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+.container {
+    display: flex;
+}
+
+.header {
+    width: 100%;
+    height: 10vh;
+}
+
 #main-container {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    height: 50vh;
+    background-color: white;
+}
+
+.sidebar {
+    width: 30vh;
     height: 100vh;
 }
 
 .grid-items {
-    width: calc(100% / 64);
-    height: calc(100% / 64);
-    border: 1px solid black;
-}
-
-#grid-items {
     width: calc(100% / 64);
     height: calc(100% / 64);
     border: 1px solid black;
